Enable CI workflow to be triggered with custom image

--- a/.github/actions/operand-cache/action.yml
+++ b/.github/actions/operand-cache/action.yml
@@ -15,6 +15,7 @@ runs:
       shell: bash
       env:
         TEST_RELEASE: ${{ contains(github.event.pull_request.labels.*.name, 'test/release') }}
+        CUSTOM_IMAGE: ${{ inputs.operand }}
       run: |
         # Only test a subset of supported Operands
         ./scripts/ci/install_test_operands.sh
