--- a/.github/workflows/test_hr_rolling_upgrades.yml
+++ b/.github/workflows/test_hr_rolling_upgrades.yml
@@ -7,6 +7,24 @@ on:
         description: 'A CSV of Operand versions to be skipped when executing TestOperandUpgrades'
         required: false
         type: string
+      operand:
+        description: 'The FQN of the Operand image to be used. If left blank the most recent Operand defined in the Operator repository is used.'
+        required: false
+        type: string
+      operandArtifact:
+        description: 'The name of the GH artifact containing the Operand image'
+        required: false
+        type: string
+      operandVersion:
+        description: 'The upstream version of the Operand image'
+        required: false
+        type: string
+      ref:
+        type: string
+        required: false
+      repository:
+        type: string
+        required: false
 
 env:
   TESTING_LOG_DIR: ${{ github.workspace }}/test/reports
@@ -18,6 +36,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v6
+        with:
+          ref: ${{ inputs.ref }}
+          repository: ${{ inputs.repository }}
 
       - name: Free Disk Space
         uses: jlumbroso/free-disk-space@v1.3.1
@@ -27,6 +48,14 @@ jobs:
 
       - name: Cache Operand Images
         uses: ./.github/actions/operand-cache
+
+      - name: Inject custom Operand
+        uses: ./.github/actions/custom-operand
+        if: ${{ inputs.operand != '' }}
+        with:
+          operand: ${{ inputs.operand }}
+          operandArtifact: ${{ inputs.operandArtifact }}
+          operandVersion: ${{ inputs.operandVersion }}
 
       - name: Initialize Kubernetes Cluster
         uses: ./.github/actions/kind
