--- a/.github/workflows/test_without_olm.yml
+++ b/.github/workflows/test_without_olm.yml
@@ -11,6 +11,24 @@ on:
         description: 'The prefix to be applied to all artifacts uploaded by this workflow'
         required: true
         type: string
+      operand:
+        description: 'The FQN of the Operand image to be used. If left blank the most recent Operand defined in the Operator repository is used.'
+        required: false
+        type: string
+      operandArtifact:
+        description: 'The name of the GH artifact containing the Operand image'
+        required: false
+        type: string
+      operandVersion:
+        description: 'The upstream version of the Operand image'
+        required: false
+        type: string
+      ref:
+        type: string
+        required: false
+      repository:
+        type: string
+        required: false
 
 env:
   CONFIG_LISTENER_IMAGE: 'localhost:5001/infinispan-operator'
@@ -26,12 +44,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v6
+        with:
+          ref: ${{ inputs.ref }}
+          repository: ${{ inputs.repository }}
 
       - name: Install Dependencies
         uses: ./.github/actions/dependencies
 
       - name: Cache Operand Images
         uses: ./.github/actions/operand-cache
+
+      - name: Inject custom Operand
+        uses: ./.github/actions/custom-operand
+        if: ${{ inputs.operand != '' }}
+        with:
+          operand: ${{ inputs.operand }}
+          operandArtifact: ${{ inputs.operandArtifact }}
+          operandVersion: ${{ inputs.operandVersion }}
 
       - name: Initialize Kubernetes Cluster
         uses: ./.github/actions/kind
