--- a/.github/workflows/test_xsite.yml
+++ b/.github/workflows/test_xsite.yml
@@ -41,6 +41,8 @@ jobs:
 
       - name: Cache Operand Images
         uses: ./.github/actions/operand-cache
+        with:
+          operand: ${{ inputs.operand }}
 
       - name: Inject custom Operand
         uses: ./.github/actions/custom-operand
